--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,26 @@
-version: '2'
+version: '2.1'
 
 services:
   client:
+    hostname: client
     build: ./client/
     volumes:
       - '/usr/src/app/node_modules'
       - './client:/usr/src/app'
+    #Disable the host port mapping
+    #ports:
+    #  - "3000:3000"
+    expose:
+      - "3000"
+    env_file: '.env.local'
+    environment:
+      - NODE_ENV=${NODE_ENV}
+
+  nginx:
+    build: ./nginx/
     ports:
-      - "3000:3000"
+      - "80:80"
+    links:
+      - client
+    depends_on:
+      - client
