updated api and nginx to not cache api requests and return a /api/test route for redux to hit in client

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,9 +1,15 @@
-FROM node:latest
+FROM node:8.1
 
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
-COPY . /usr/src/app
+
+# add `/usr/src/node_modules/.bin` to $PATH
+ENV PATH /usr/src/app/node_modules/.bin:$PATH
+
+# install and cache app dependencies
+ADD package.json /usr/src/app/package.json
+RUN npm install
 
 EXPOSE 8080
-RUN npm install
-CMD ["npm", "start"]
+
+CMD ["npm","start"]
