--- a/api/package.json
+++ b/api/package.json
@@ -10,5 +10,11 @@
     "express": "~4.0.0",
     "halson": "~2.3.1",
     "mongoose": "~4.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.11.0"
+  },
+  "scripts": {
+    "start": "nodemon -L /usr/src/app"
   }
 }
